[workspace]
resolver = "2"

members = [
    "age-plugin-tlock",
    "tlock",
    "tlock_age"
]

[workspace.dependencies]
age = "0.11"
age-core = "0.11"
anyhow = "1.0"
criterion = "0.5"
drand_core = "0.0.17"
getrandom = "0.2"
hex = "0.4"
rand = { version = "0.8", default-features = false }
thiserror = "2.0"
