[package]
name = "age-plugin-tlock"
description = "tlock plugin for age clients."
version = "0.1.0"
authors = ["Thibault Meunier <crates@thibault.uk>"]
edition = "2021"
readme = "./README.md"
homepage = "https://github.com/thibmeu/tlock-rs"
repository = "https://github.com/thibmeu/tlock-rs"
keywords = ["tlock", "age", "cli", "cryptography", "encryption"]
categories = ["command-line-utilities", "cryptography"]
license = "MIT"

[dependencies]
age = "0.9.2"
age-core = "0.9.0"
age-plugin = "0.4.0"
bincode = "2.0.0-rc.3"
clap = { version = "4.3.19", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
drand_core = "0.0.11"
hex = "0.4.3"
thiserror = "1.0.44"
tlock_age = { version = "0.0.4", path = "../tlock_age", features = ["internal"] }
