[package]
name = "age-plugin-tlock"
description = "tlock plugin for age clients."
version = "0.1.1"
authors = ["Thibault Meunier <crates@thibault.uk>"]
edition = "2021"
readme = "./README.md"
homepage = "https://github.com/thibmeu/tlock-rs"
repository = "https://github.com/thibmeu/tlock-rs"
keywords = ["tlock", "age", "cli", "cryptography", "encryption"]
categories = ["command-line-utilities", "cryptography"]
license = "MIT"

[dependencies]
age = { workspace = true }
age-core = { workspace = true }
age-plugin = "0.4.0"
bincode = "2.0.0-rc.3"
clap = { version = "4.5.1", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
drand_core = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tlock_age = { version = "0.0.5", path = "../tlock_age", features = ["internal"] }
