[package]
name = "tlock-age"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.9.0"
age-core = "0.9.0"
anyhow = "1.0.69"
hex = "0.4.3"
tlock = { path = "../tlock" }

[dev-dependencies]
drand_core = "0.0.2"
tokio = "1.26.0"
