[package]
name = "tlock"
description = "Rust encryption library for practical time-lock encryption."
version = "0.1.0"
authors = ["Thibault Meunier <crates@thibault.uk>"]
edition = "2021"
readme = "./README.md"
homepage = "https://github.com/thibmeu/tlock-rs"
repository = "https://github.com/thibmeu/tlock-rs"
keywords = ["tlock", "cryptography", "encryption"]
categories = ["cryptography"]
license = "MIT"

[dependencies]
anyhow = "1"
bls12_381_plus = { version = "0.7.0", features = ["nightly"] }
group = "0.12"
itertools = "0.10.5"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"]}
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
tracing = "0.1.37"

[target.'cfg(wasm32)'.dependencies]
getrandom = { version = "0.2.8", features = ["js"] }

[dev-dependencies]
criterion = "0.4.0"
drand_core = "0.0.5"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "encrypt_decrypt"
harness = false
