[package]
name = "tlock"
description = "Rust encryption library for practical time-lock encryption."
version = "0.0.3"
authors = ["Thibault Meunier <crates@thibault.uk>"]
edition = "2021"
readme = "./README.md"
homepage = "https://github.com/thibmeu/tlock-rs"
repository = "https://github.com/thibmeu/tlock-rs"
keywords = ["tlock", "cryptography", "encryption"]
categories = ["cryptography"]
license = "MIT"

[dependencies]
anyhow = "1"
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
itertools = "0.10.5"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"]}
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.3.1"
sha2 = "0.10.6"
thiserror = "1.0.40"
tracing = "0.1.37"

[target.'cfg(wasm32)'.dependencies]
getrandom = { version = "0.2.8", features = ["js"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
drand_core = "0.0.7"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["criterion", "flamegraph"] }

[[bench]]
name = "encrypt_decrypt"
harness = false
