[package]
name = "tlock_age"
description = "Rust encryption library for hybrid time-lock encryption."
version = "0.0.3"
authors = ["Thibault Meunier <crates@thibault.uk>"]
edition = "2021"
readme = "../README.md"
homepage = "https://github.com/thibmeu/tlock-rs"
repository = "https://github.com/thibmeu/tlock-rs"
keywords = ["tlock", "cryptography", "encryption"]
categories = ["cryptography"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.9"
age-core = "0.9"
anyhow = "1.0.69"
hex = "0.4.3"
thiserror = "1.0.40"
tlock = { path = "../tlock", version = "0.0.3" }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
drand_core = "0.0.7"
rand = "0.8.5"
tokio = { version = "1.26.0", features = ["full"] }

[target.'cfg(wasm32)'.dev-dependencies]
getrandom = { version = "0.2.8", features = ["js"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["criterion", "flamegraph"] }

[features]
armor = ["age/armor"]

[[bench]]
name = "encrypt_decrypt"
harness = false
