[package]
name = "tlock_age"
description = "Rust encryption library for hybrid time-lock encryption."
version = "0.0.5"
authors = ["Thibault Meunier <crates@thibault.uk>"]
edition = "2021"
readme = "../README.md"
homepage = "https://github.com/thibmeu/tlock-rs"
repository = "https://github.com/thibmeu/tlock-rs"
keywords = ["tlock", "cryptography", "encryption"]
categories = ["cryptography"]
license = "MIT"

[dependencies]
age = { workspace = true }
age-core = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tlock = { path = "../tlock", version = "0.0.5" }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
drand_core = { workspace = true }
rand = { workspace = true, default-features = true }

[target.'cfg(wasm32)'.dev-dependencies]
getrandom = { workspace = true, features = ["js"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["criterion", "flamegraph"] }

[features]
default = ["rfc9380"]
armor = ["age/armor"]
internal = []
rfc9380 = ["tlock/rfc9380"]

[[bench]]
name = "encrypt_decrypt"
harness = false
